# apiblueprint

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260427_000001_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: models.py  schemas.py
backend/app/routes/: endpoints.py  projects.py  schemas.py  spec.py
backend/tests/: test_smoke.py
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: ApiTester.jsx  Dashboard.jsx  Documentation.jsx  Editor.jsx  ExportPage.jsx  Monitoring.jsx  SchemaBuilder.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/test/: App.test.jsx
frontend/src/utils/: endpoints.js
mock/: Dockerfile  package-lock.json  package.json  server.js
mock/test/: server.test.js
